# readonly-mcp-akamai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  docker.yml  publish.yml
src/mcp_akamai/: __init__.py  __main__.py  cache.py  client.py  index.py  logging_config.py  server.py  settings.py
src/mcp_akamai/tools/: __init__.py  dns.py  edgeworkers.py  network_lists.py  properties.py  utility.py
tests/: conftest.py  helpers.py  smoke_test.py  test_cache.py  test_client.py  test_dns.py  test_edgeworkers.py  test_index.py  test_network_lists.py  test_properties.py  test_settings.py  test_utility.py
